Add Fixed Asset Investment
