# proto/server/server.swagger.json
@@ -257,6 +257,29 @@
         ]
       }
     },
+    "/v1/macroscopic/investment_in_fixed_assets": {
+      "get": {
+        "summary": "固定资产投资 (房地产、第一、二、三产业)",
+        "operationId": "Greeter_GetInvestmentInFixedAssets",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/serverInvestmentInFixedAssetsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Greeter"
+        ]
+      }
+    },
     "/v1/macroscopic/new_financial_credit": {
       "get": {
         "summary": "中国新增信贷数据",
@@ -849,6 +872,66 @@
           }
         }
       }
+    },
+    "serverInvestmentInFixedAssets": {
+      "type": "object",
+      "properties": {
+        "date": {
+          "type": "string"
+        },
+        "investmentCompletedAmount": {
+          "type": "string",
+          "title": "投资完成额(亿元)"
+        },
+        "investmentCompletedAmountYearOnYear": {
+          "type": "string",
+          "title": "投资完成额同比增长(%)"
+        },
+        "primaryIndustry": {
+          "type": "string",
+          "title": "第一产业(亿元)"
+        },
+        "primaryIndustryYearOnYear": {
+          "type": "string",
+          "title": "第一产业用同比%"
+        },
+        "secondaryIndustry": {
+          "type": "string",
+          "title": "第二产业"
+        },
+        "secondaryIndustryYearOnYear": {
+          "type": "string",
+          "title": "第二产业同比%"
+        },
+        "tertiaryIndustry": {
+          "type": "string",
+          "title": "第三产业"
+        },
+        "tertiaryIndustryYearOnYear": {
+          "type": "string",
+          "title": "第三产业同比%"
+        },
+        "realEstateDevelopment": {
+          "type": "string",
+          "title": "房地产开发(亿元)"
+        },
+        "realEstateDevelopmentYearOnYear": {
+          "type": "string",
+          "title": "房地产开发同比增长(%)"
+        }
+      }
+    },
+    "serverInvestmentInFixedAssetsResponse": {
+      "type": "object",
+      "properties": {
+        "results": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/serverInvestmentInFixedAssets"
+          }
+        }
+      },
+      "title": "固定资产投资"
     },
     "serverMoneySupply": {
       "type": "object",
